--- a/ollama-functions/package.json
+++ b/ollama-functions/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "tsc && node dist/index.js",
+    "hermes2": "tsc && node dist/hermes2.js",
     "extractemail": "tsc && node dist/extractemail.js",
     "getweather": "tsc && node dist/getweather.js",
     "test": "echo \"Error: no test specified\" && exit 1"
